# ANEL

./: .gitignore  PLAN-phase11.md  README.md  README_CN.md  pyproject.toml
docs/: WORK_LOG.md
docs/ANEL/: ANEL 从“概念验证”转向“工程落地”与“生态构建”.md  ANEL 和 Skills 的关系.md  ANEL 工程落地路线图 (Project Roadmap).md  ANEL-Architecture-Manifesto-v1.0.md  ⭐️ ANID v1 0 协议规范 (RFC).md  ⭐️ Hyper-Shell.md  ⭐️ 原子能力契约文件的具体形式.md  ⭐️ 工程落地图完成后的位置.md  ⭐️ 智能体原生执行层 (ANEL) 架构宣言 v1 0—— AGI 时代的“数字躯体”重构.md
docs/design/: ANEL_IMPLEMENTATION_REPORT.md  HYPER_SHELL_DESIGN.md  QMD_ANALYSIS_REPORT.md  QMD_ANEL_IMPLEMENTATION.md
docs/dev/: NEXT_SESSION_GUIDE.md
docs/main/: WORK_LOG.md
docs/plans/: 2026-02-18-anel-copilot.md
qmd-go/: go.mod  go.sum
qmd-go/cmd/qmd/: main.go
qmd-go/pkg/cli/: agent.go  cleanup.go  collection.go  commands.go  context.go  embed.go  get.go  mcp.go  multi_get.go  query.go  search.go  status.go  update.go  vsearch.go
qmd-go/pkg/config/: config.go
qmd-go/pkg/formatter/: formatter.go
qmd-go/pkg/llm/: router.go
qmd-go/pkg/store/: chunker.go  search.go  store.go
qmd-python/: pyproject.toml
qmd-python/src/qmd/: __init__.py  __main__.py
qmd-python/src/qmd/cli/: __init__.py  agent.py  commands.py
qmd-python/src/qmd/config/: __init__.py  config.py
qmd-python/src/qmd/formatter/: __init__.py  formatter.py
qmd-python/src/qmd/llm/: __init__.py  router.py
qmd-python/src/qmd/mcp/: server.py
qmd-python/src/qmd/store/: __init__.py  chunker.py  store.py
scripts/: build.sh  e2e-demo.py  release.sh
src/: CLAUDE.md  README.md
src/anel-copilot/: README.md  package-lock.json  package.json  tsconfig.json
src/anel-copilot/src/: cli.ts  index.ts
src/anel-copilot/src/core/: analyzer.ts  ast-detector.ts  batch.ts  detector.ts  generator.ts  llm.ts  rules.ts  types.ts  verifier.ts
src/anel-copilot/tests/: analyzer.test.ts  ast-detector.test.ts  batch.test.ts  detector.test.ts  generator.test.ts  llm.test.ts  rules.test.ts
src/anel-copilot/tests/fixtures/: sample-go.ts  sample-rust.ts
src/qmd-go/: go.mod  go.sum
src/qmd-go/cmd/qmd/: main.go
src/qmd-go/internal/anel/: anel.go  anel_test.go  error.go  spec.go  spec_test.go
src/qmd-go/internal/cli/: collection.go  commands.go  context.go  embed.go  get.go  mcp.go  search.go
src/qmd-go/internal/config/: config.go  config_test.go
src/qmd-go/internal/llm/: router.go
src/qmd-go/internal/mcp/: server.go  server_test.go
src/qmd-go/internal/store/: qdrant.go  store.go
src/qmd-python/: pyproject.toml
src/qmd-python/src/: __init__.py  __main__.py
src/qmd-python/src/anel/: __init__.py  spec.py
src/qmd-python/src/cli/: __init__.py  agent.py  app.py  commands.py
src/qmd-python/src/config/: __init__.py  mod.py
src/qmd-python/src/llm/: __init__.py  router.py
src/qmd-python/src/mcp/: __init__.py  server.py
src/qmd-python/src/store/: __init__.py  mod.py
src/qmd-python/src/store/qdrant_backend/: __init__.py
src/qmd-python/tests/: test_anel.py  test_config.py  test_mcp_server.py  test_spec.py
src/qmd-rust/: Cargo.toml  build.rs
src/qmd-rust/plugin-api/: plugin.wit
src/qmd-rust/src/: lib.rs  main.rs
src/qmd-rust/src/anel/: mod.rs
src/qmd-rust/src/cli/: agent.rs  cleanup.rs  collection.rs  context.rs  embed.rs  get.rs  ls.rs  mod.rs  multi_get.rs  plugin.rs  query.rs  search.rs  status.rs  update.rs  vsearch.rs
src/qmd-rust/src/config/: mod.rs
src/qmd-rust/src/formatter/: mod.rs
src/qmd-rust/src/llm/: mod.rs
src/qmd-rust/src/mcp/: mod.rs
src/qmd-rust/src/plugin/: error.rs  manager.rs  mod.rs  types.rs
src/qmd-rust/src/server/: handlers.rs  middleware.rs  mod.rs
src/qmd-rust/src/server/observability/: metrics.rs  mod.rs  tracing_mod.rs
src/qmd-rust/src/store/: chunker.rs  lance_backend.rs  mod.rs  path.rs
src/qmd-rust/src/store/lance_backend/: lance_backend.rs
src/qmd-rust/src/store/qdrant_backend/: mod.rs  qdrant_backend.rs
src/qmd-rust/tests/: anel_protocol.rs  anel_spec.rs  cli_e2e_integration.rs  cli_integration.rs  config_integration.rs  formatter_integration.rs  hybrid_search_integration.rs  llm_integration.rs  mcp_server_integration.rs  store_integration.rs
src/qmd-rust/tests/common/: mod.rs
src/qmd-typescript/src/: qmd.ts
src/qmd-typescript/src/anel/: index.ts  spec.ts
src/shared/: README.md  example-config.yaml  index.yaml
src/shared/scripts/: compare_qmd_impls.sh  verify_qmd_compat.sh
tests/fixtures/anel/: error.schema.json  query-input.schema.json  query-output.schema.json  search-input.schema.json  search-output.schema.json  vsearch-input.schema.json  vsearch-output.schema.json
