[package]
name = "qmd-rust"
version = "0.1.0"
edition = "2021"
description = "QMD - AI-powered search with hybrid BM25 and vector search"
authors = ["QMD Team"]

[lib]
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
sqlite-vec = "0.1"
# lancedb = "0.16"  # TODO: Re-enable when dependency issues are resolved

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
shellexpand = "3.1"

# File globbing
glob = "0.3"

# LLM
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
llama-cpp-2 = { version = "0.1", optional = true }

# MCP
# mcp-sdk = "0.0"  # TODO: Re-enable when API is stable

# Utils
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
prost-build = "0.12"

[features]
default = []
sqlite-vec = []
llama-cpp = ["llama-cpp-2"]
