[package]
name = "qmd-rust"
version = "0.1.0"
edition = "2021"
description = "QMD - AI-powered search with hybrid BM25 and vector search"
authors = ["QMD Team"]

[lib]
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
sqlite-vec = "0.1"
lancedb = { version = "0.23", optional = true }
arrow-array = { version = "56.0", optional = true }
arrow-schema = { version = "56.0", optional = true }
futures-util = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
shellexpand = "3.1"

# File globbing
glob = "0.3"

# LLM
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
llama-cpp-2 = { version = "0.1", optional = true }

# MCP
rmcp = { version = "0.15", features = ["server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
bytes = "1"
http-body-util = "0.1"
schemars = "1"

# Utils
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full", "test-util"] }

[build-dependencies]
prost-build = "0.12"

[features]
default = []
sqlite-vec = []
llama-cpp = ["llama-cpp-2"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures-util", "dep:futures"]
